fix: buckets dropdown cut short on smaller screens

--- a/css/s3-browser.css
+++ b/css/s3-browser.css
@@ -278,5 +278,5 @@
 }
 
 .attachments-browser .s3-media-toolbar {
-    height: 37px !important;
+    height: 40px !important;
 }
